fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ body {
 
 .preview {
     font-family:"Roboto Slab",serif;
-    background-color: white;
 }
 
 .preview h1{
